tests/paczka1/small_fuzzy/17386373.err
Error in line 3: 63cmOIiLIeo S519 57,3
Error in line 5: 63cmOIiLIeo A802 23,0
